Alteração de views de Registo e Login.

--- a/Views/Account/AdminUserList.cshtml
+++ b/Views/Account/AdminUserList.cshtml
@@ -78,7 +78,7 @@
     }
 
     .btn-outline-dark {
-        border-radius: 20px;
+        border-radius: 10px;
         padding: 4px 14px;
         font-weight: 500;
     }
@@ -86,7 +86,7 @@
     .badge {
         font-size: 0.9em;
         padding: 6px 10px;
-        border-radius: 20px;
+        border-radius: 10px;
     }
 
     .card {
@@ -97,7 +97,7 @@
     }
 
     .btn-outline-danger {
-        border-radius: 20px;
+        border-radius: 10px;
         padding: 4px 12px;
         font-weight: 500;
     }
@@ -106,10 +106,10 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: 4px 14px; /* igual ao botão de editar */
-        border-radius: 20px;
+        padding: 4px 14px;
+        border-radius: 10px;
         font-size: 0.9em;
         font-weight: 500;
-        height: 34px; /* garante altura igual */
+        height: 34px;
     }
 </style>
