--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -199,17 +199,11 @@
                     {
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="btn btn-light mx-2" asp-controller="Home" asp-action="Index">Dashboard</a>
+                                <a class="btn btn-light mx-2" asp-controller="Home" asp-action="Dashboard">Painel</a>
                             </li>
 
-                            <li class="nav-item dropdown">
-                                <a class="btn btn-light mx-2 dropdown-toggle" href="#" id="transacoesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Transações
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="transacoesDropdown">
-                                    <li><a class="dropdown-item" asp-controller="Transacao" asp-action="NovaTransacao">Nova Transação</a></li>
-                                    <li><a class="dropdown-item" asp-controller="Transacao" asp-action="Historico">Histórico</a></li>
-                                </ul>
+                            <li class="nav-item">
+                                <a class="btn btn-light mx-2" asp-controller="Transacao" asp-action="Transacoes">Transações</a>
                             </li>
 
                             <li class="nav-item dropdown">
