--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -216,15 +216,18 @@
                                 </ul>
                             </li>
 
-                            <li class="nav-item dropdown">
-                                <a class="btn btn-light mx-2 dropdown-toggle" href="#" id="relatorioDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Relatório
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="relatorioDropdown">
-                                    <li><a class="dropdown-item" asp-controller="Relatorios" asp-action="Mensal">Mensal</a></li>
-                                    <li><a class="dropdown-item" asp-controller="Relatorios" asp-action="Anual">Anual</a></li>
-                                </ul>
-                            </li>
+                            @if (User.IsInRole("Empresarial") || User.IsInRole("Admin"))
+                            {
+                                <li class="nav-item dropdown">
+                                    <a class="btn btn-light mx-2 dropdown-toggle" href="#" id="relatorioDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Relatório
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="relatorioDropdown">
+                                        <li><a class="dropdown-item" asp-controller="Relatorios" asp-action="Mensal">Mensal</a></li>
+                                        <li><a class="dropdown-item" asp-controller="Relatorios" asp-action="Anual">Anual</a></li>
+                                    </ul>
+                                </li>
+                            }
 
                             @if (User.IsInRole("Admin"))
                             {
