--- a/Views/Planeamento/Orcamento.cshtml
+++ b/Views/Planeamento/Orcamento.cshtml
@@ -14,7 +14,7 @@
             <!-- Limite Mensal -->
             <div class="col-md-3">
                 <label class="form-label fw-bold">Limite Mensal (€)</label>
-                <input name="LimiteMensal" type="number" step="0.01"
+                <input name="LimiteMensal" type="text"
                        class="form-control border-0 border-bottom rounded-0" required
                        placeholder="Inserir" style="background: #f8f9fa;" />
             </div>
