--- a/Views/Transacao/Transacoes.cshtml
+++ b/Views/Transacao/Transacoes.cshtml
@@ -38,7 +38,7 @@
 
             <div class="col-md-3">
                 <label asp-for="NovaTransacao.Valor" class="form-label fw-bold">Valor (€)</label>
-                <input name="NovaTransacao.Valor" type="number" step="0.01"
+                <input name="NovaTransacao.Valor" type="text"
                        class="form-control border-0 border-bottom rounded-0"
                        style="background: #f8f9fa;" placeholder="Inserir" value="" />
             </div>
