Adição das views do Relatório
Adição das views em relação aos Relatórios

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -223,8 +223,8 @@
                                         Relatório
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="relatorioDropdown">
-                                        <li><a class="dropdown-item" asp-controller="Relatorios" asp-action="Mensal">Mensal</a></li>
-                                        <li><a class="dropdown-item" asp-controller="Relatorios" asp-action="Anual">Anual</a></li>
+                                        <li><a class="dropdown-item" asp-controller="Relatorio" asp-action="Mensal">Mensal</a></li>
+                                        <li><a class="dropdown-item" asp-controller="Relatorio" asp-action="Anual">Anual</a></li>
                                     </ul>
                                 </li>
                             }
